# rust_value_investing_test

./: .gitignore  Cargo.toml  README.md
.config/: config.toml
config/: example.json
src/: financial_analysis.rs  lib.rs  main.rs  stock_data_fetching.rs
