[package]
name = "financial-analysis"
version = "0.1.0"
authors = ["TT"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
exitfailure = "0.5.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
config = "0.13.3"
anyhow = "1.0.51"
futures = "0.3"